Wed Sep 19 17:41:13 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-histogram.c (main): turn off the display of mean and
 	standard deviation it is too confusing because it is not the mean
 	of the data itself.

Tue Sep 18 20:08:39 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_gsl_histogram.sh: modified the expected test output to
 	account for the mean,sigma lines now produced
 
Wed Sep 12 13:39:55 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-histogram.c (main): print out the mean and standard
 	deviation as comments

Sun Sep  9 22:57:11 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: print out a warning for OS/2 telling the user to
 	run an extra script

Fri Sep  7 14:32:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.pc.in: added pkg-config file

	* configure.in: avoid clobbering any LIBS specified, by not
 	putting -lm in front of them.  This allows the user to specify an
 	alternate math library for the configure script.
	(ac_cv_func_printf_longdouble): added generation of gsl.pc for
 	pkg-config

Thu Sep  6 21:08:10 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: added an option to specify an alternative math
 	library

Tue Sep  4 09:41:37 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.spec.in: autogenerate gsl.spec from gsl.spec.in

Sun Aug 26 17:19:24 2001  Brian Gough  <bjg@network-theory.co.uk>

	* acconfig.h: fixed incorrect #ifdef for HAVE_FINITE (Henry
 	Sobotka)

Sat Aug 25 10:25:41 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h: moved includes to beginning of file to avoid
 	redefinition errors on OS/2

Tue Aug 21 23:54:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_nan.h (GSL_POSINF): removed incorrect use of _FPCLASS.. for
 	MSVC, these are flags not numerical values.

Thu Aug  9 22:51:00 2001  Brian Gough  <bjg@network-theory.co.uk>

	* config.h.in: added a macro for discarding a pointer, used to
 	suppress warnings from gcc about unused parameters
