@@ -1,3 +1,7 @@
+Sat Sep 29 18:04:35 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gsl.m4: cleaned up arguments to GSL_CONFIG
+
 Wed Sep 19 17:41:13 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* gsl-histogram.c (main): turn off the display of mean and
